--- a/bookjeok-front/package.json
+++ b/bookjeok-front/package.json
@@ -55,6 +55,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "fast-xml-parser": "^5.2.5",
     "framer-motion": "^12.23.12",
     "lodash": "^4.17.21",
@@ -92,6 +93,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/dompurify": "^3.2.0",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
